finished portfolio section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <a class="b-portfolio__navItems" href="#">HTML</a>
                     <a class="b-portfolio__navItems" href="#">Wordpress</a>
                 </div>
-                <div class="dropdown d-block d-lg-none">
+                <div class="dropdown d-block d-lg-none b-portfolio__dropdownMenu">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Portfolio Menu
@@ -241,11 +241,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -261,11 +263,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -280,11 +284,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -303,11 +309,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -322,11 +330,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -342,11 +352,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -365,11 +377,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -385,11 +399,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -405,11 +421,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -428,11 +446,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -448,11 +468,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -468,11 +490,13 @@
                                 <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
                                         HERE</a>
                                 </h2>
-                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                <p class="b-portfolio__imgDesc d-none d-lg-block">At vero eos et accusamus et iusto odio
+                                    dignissimos
                                     ducimus
                                     qui
                                     blanditiis praesentium</p>
-                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                <a href="#" class="d-block d-lg-none b-portfolio__imgLink_mobile">Read more ></a>
+                                <div class="b-iconsMenu b-portfolio__iconsBox d-none d-lg-flex">
                                     <div class="b-iconsMenu__item b-portfolio__iconLink">
                                         <a class="b-iconsMenu__link" href="#"></a>
                                     </div>
@@ -484,7 +508,12 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="b-portfolio__startProject">
+                    <p class="b-portfolio__startDesc">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                    </p>
+                    <a href="#" class="buttonLink buttonLinkPortfolio">Start Project</a>
+                </div>
 
             </section>
 
