finished team section

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                 <div class="progressBox col-lg-6">
                     <div class="row">
                         <div class="col-sm-3 progress-item">
-                            <div class="progress" data-percentage="80">
-                                <span class="progress-left">
-                                    <span class="progress-bar"></span>
+                            <div class="progress progress-services" data-percentage="80">
+                                <span class="progress-left progress-left-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <span class="progress-right">
-                                    <span class="progress-bar"></span>
+                                <span class="progress-right progress-right-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <div class="progress-value">
+                                <div class="progress-value progress-value-services">
                                     <div class="percent">
                                         80%
                                     </div>
@@ -152,14 +152,14 @@
                             <div class="progress-desc">Branding</div>
                         </div>
                         <div class="col-sm-3 progress-item">
-                            <div class="progress" data-percentage="70">
-                                <span class="progress-left">
-                                    <span class="progress-bar"></span>
+                            <div class="progress progress-services" data-percentage="70">
+                                <span class="progress-left progress-left-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <span class="progress-right">
-                                    <span class="progress-bar"></span>
+                                <span class="progress-right progress-right-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <div class="progress-value">
+                                <div class="progress-value progress-value-services">
                                     <div class="percent">
                                         70%
                                     </div>
@@ -168,14 +168,14 @@
                             <div class="progress-desc">Web Design</div>
                         </div>
                         <div class="col-sm-3 progress-item">
-                            <div class="progress" data-percentage="60">
-                                <span class="progress-left">
-                                    <span class="progress-bar"></span>
+                            <div class="progress progress-services" data-percentage="60">
+                                <span class="progress-left progress-left-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <span class="progress-right">
-                                    <span class="progress-bar"></span>
+                                <span class="progress-right progress-right-services">
+                                    <span class="progress-bar progress-bar-services"></span>
                                 </span>
-                                <div class="progress-value">
+                                <div class="progress-value progress-value-services">
                                     <div class="percent">
                                         60%
                                     </div>
@@ -508,11 +508,196 @@
                         </div>
                     </div>
                 </div>
-                <div class="b-portfolio__startProject">
-                    <p class="b-portfolio__startDesc">
+                <div class="footerSection">
+                    <p class="footerSectionDesc">
                         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                     </p>
-                    <a href="#" class="buttonLink buttonLinkPortfolio">Start Project</a>
+                    <a href="#" class="buttonLink buttonFooterSection">Start Project</a>
+                </div>
+            </section>
+            <section class="b-team">
+                <div class="b-team__title">
+                    <h2 class="b-sectionTitle sectionTitleCenter">THE TEAM</h2>
+                    <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
+                        dignissimos ducimus qui <br> blanditiis praesentium
+                    </p>
+                </div>
+                <div id="carouselExampleIndicators" class="carousel slide b-team__carousel" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="b-team__carouselItems row">
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img.png" alt="team-img"
+                                        class="b-team__foto"></div>
+                                <div class="b-team__carouselAside col-md-4">
+                                    <div class="b-team__fotoDescWrap">
+                                        <div class="b-team__fotoNameBox">
+                                            <p class="b-team__fotoName">Abdullah Noman</p>
+                                            <p class="b-team__fotoProf">Creative Director, Code Cafe</p>
+                                        </div>
+                                        <p class="b-team__fotoDest">At vero eos et accusamus et iusto odio dignissimos
+                                            ducimus
+                                            qui blanditiis praesentium</p>
+                                    </div>
+
+                                    <div class="b-team__progressWrap">
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">BRANDING</p>
+                                            <p class="b-team__progressText">80%</p>
+                                        </div>
+                                        <div class="progress b-team__progressFirst">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 80%">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">Web Design</p>
+                                            <p class="b-team__progressText">65%</p>
+                                        </div>
+                                        <div class="progress b-team__progressSecond">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">User Interface</p>
+                                            <p class="b-team__progressText">75%</p>
+                                        </div>
+                                        <div class="progress b-team__progressThird">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="b-team__carouselItems row">
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img2.jpeg" alt="team-img"
+                                        class="b-team__foto"></div>
+                                <div class="b-team__carouselAside col-md-4">
+                                    <div class="b-team__fotoDescWrap">
+                                        <div class="b-team__fotoNameBox">
+                                            <p class="b-team__fotoName">Abdullah Noman</p>
+                                            <p class="b-team__fotoProf">Creative Director, Code Cafe</p>
+                                        </div>
+                                        <p class="b-team__fotoDest">At vero eos et accusamus et iusto odio dignissimos
+                                            ducimus
+                                            qui blanditiis praesentium</p>
+                                    </div>
+
+                                    <div class="b-team__progressWrap">
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">BRANDING</p>
+                                            <p class="b-team__progressText">80%</p>
+                                        </div>
+                                        <div class="progress b-team__progressFirst">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 80%">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">Web Design</p>
+                                            <p class="b-team__progressText">65%</p>
+                                        </div>
+                                        <div class="progress b-team__progressSecond">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">User Interface</p>
+                                            <p class="b-team__progressText">75%</p>
+                                        </div>
+                                        <div class="progress b-team__progressThird">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="carousel-item">
+                            <div class="b-team__carouselItems row">
+                                <div class="b-team__fotoBox col-md-3"><img src="images/team-img3.jpeg" alt="team-img"
+                                        class="b-team__foto"></div>
+                                <div class="b-team__carouselAside col-md-4">
+                                    <div class="b-team__fotoDescWrap">
+                                        <div class="b-team__fotoNameBox">
+                                            <p class="b-team__fotoName">Abdullah Noman</p>
+                                            <p class="b-team__fotoProf">Creative Director, Code Cafe</p>
+                                        </div>
+                                        <p class="b-team__fotoDest">At vero eos et accusamus et iusto odio dignissimos
+                                            ducimus
+                                            qui blanditiis praesentium</p>
+                                    </div>
+
+                                    <div class="b-team__progressWrap">
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">BRANDING</p>
+                                            <p class="b-team__progressText">80%</p>
+                                        </div>
+                                        <div class="progress b-team__progressFirst">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 80%">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">Web Design</p>
+                                            <p class="b-team__progressText">65%</p>
+                                        </div>
+                                        <div class="progress b-team__progressSecond">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 65%" aria-valuenow="65" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                        <div class="b-team__progressTextBox">
+                                            <p class="b-team__progressText">User Interface</p>
+                                            <p class="b-team__progressText">75%</p>
+                                        </div>
+                                        <div class="progress b-team__progressThird">
+                                            <div class="progress-bar b-team__progressBar" role="progressbar"
+                                                style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                                                aria-valuemax="100">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div class="footerSection footerSectionTeam">
+                    <p class="footerSectionDesc">
+                        Already Loved Us? Let’s talk!
+                    </p>
+                    <a href="#" class="buttonLink buttonFooterSection">Contact Us</a>
                 </div>
 
             </section>
